Bug 1967464 Align tab audio button r=kcochrane,desktop-theme-reviewers,tabbrowser-reviewers,dao,emilio a=RyanVM

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -739,7 +739,7 @@
       #tabbrowser-tabs[orient="horizontal"] &:not([pinned]):not([crashed]),
       :root:not([sidebar-expand-on-hover]) #tabbrowser-tabs[orient="vertical"][expanded] &:not([pinned]):not([crashed]) {
         &:is([soundplaying], [muted], [activemedia-blocked]) {
-          display: block;
+          display: flex;
         }
 
         &[soundplaying]::part(button) {
